# IMC-Prosperity

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE_DOCTRINE.md  CLAUDE.md  Optimisation_Plan_13.04.md  README.md  Writing an Algorithm in Python.html  pyproject.toml  requirements-dev.txt  requirements.txt  round1_implementation_plan.md
docs/: MARKET_MAKING_INDEX.md  README.md  RESEARCH_SUMMARY.md  adding_a_product.md  architecture.md  ash_implementation_quickstart.md  calibration_runbook.md  eda_tutorial_round_1.md  manual_round_agent_brief.md  manual_round_playbook.md  market_making_literature_pass.md  new_round_checklist.md  phase_3_fair_value_note.md  phase_4_review_discipline_note.md  phase_5_tomatoes_baseline_note.md  phase_6_robustness_note.md  phase_9_submission_checklist.md  tomatoes_depth_mid_tuning_note.md
outputs/: official_upload_guide.md  optim_pass_1_notes.md  optim_pass_1_official_validation.md  optim_pass_1_promotion.md  optim_pass_1_review_notes.md  optim_pass_1_run_manifest.md  optim_pass_1_shortlists.md
src/: __init__.py  datamodel.py  trader.py
submissions/: README.md
tests/: test_ash_calibration.py  test_ash_phase_c_strategies.py  test_ash_shape_override.py  test_ash_target_position.py  test_bot_sampler.py  test_buy_and_hold.py  test_calibration_general_mode.py  test_calibration_pipeline.py  test_calibration_runner_integration.py  test_charts.py  test_config.py  test_crash_telemetry.py  test_datamodel.py  test_day_rollover.py  test_drilldown.py  test_engine_orchestrator.py  test_execution.py  test_fair_value.py  test_fill_calibration.py  (+44 more)
(+988 files in other folders)
